Closed
Bug 1516956
Opened 6 years ago
Closed 6 years ago
Intermittent /worklets/audio-worklet-import.https.html | application crashed [@ mozilla::MediaStreamGraph::IsNonRealtime()] | expected OK
Categories
(Core :: DOM: Core & HTML, defect, P5)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla67
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox65 | --- | unaffected |
firefox66 | --- | disabled |
firefox67 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: karlt)
References
Details
(Keywords: crash, intermittent-failure, regression)
Crash Data
Attachments
(2 files)
Filed by: btara [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=219372947&repo=mozilla-inbound
https://queue.taskcluster.net/v1/task/OLCre3D5TGK6dq6w_uHSYg/runs/0/artifacts/public/logs/live_backing.log
11:21:27 INFO - PROCESS-CRASH | /worklets/audio-worklet-import.https.html | application crashed [@ mozilla::MediaStreamGraph::IsNonRealtime()]
11:21:27 INFO - Crash dump filename: c:\users\task_1546253728\appdata\local\temp\tmptkl5pe.mozrunner\minidumps\79c96d29-ec08-491e-b5ed-0f69626c7b59.dmp
11:21:27 INFO - Operating system: Windows NT
11:21:27 INFO - 6.1.7601 Service Pack 1
11:21:27 INFO - CPU: x86
11:21:27 INFO - GenuineIntel family 6 model 63 stepping 2
11:21:27 INFO - 8 CPUs
11:21:27 INFO -
11:21:27 INFO - GPU: UNKNOWN
11:21:27 INFO -
11:21:27 INFO - Crash reason: EXCEPTION_ACCESS_VIOLATION_READ
11:21:27 INFO - Crash address: 0xd9
11:21:27 INFO - Assertion: Unknown assertion type 0x00000000
11:21:27 INFO - Process uptime: 10 seconds
11:21:27 INFO -
11:21:27 INFO - Thread 0 (crashed)
11:21:27 INFO - 0 xul.dll!mozilla::MediaStreamGraph::IsNonRealtime() [MediaStreamGraph.cpp:16823b6a72c5885ce37849fe5d2526d9600696c6 : 3714 + 0x0]
11:21:27 INFO - eip = 0x53d19e70 esp = 0x002ff450 ebp = 0x002ff45c ebx = 0x0865cac0
11:21:27 INFO - esi = 0x0ae036a0 edi = 0x016019a0 eax = 0x00000000 ecx = 0x00000000
11:21:27 INFO - edx = 0x00000001 efl = 0x00010202
11:21:27 INFO - Found by: given as instruction pointer in context
11:21:27 INFO - 1 xul.dll!mozilla::dom::WorkletFetchHandler::OnStreamComplete(nsIStreamLoader *,nsISupports *,nsresult,unsigned int,unsigned char const *) [Worklet.cpp:16823b6a72c5885ce37849fe5d2526d9600696c6 : 226 + 0x6]
11:21:27 INFO - eip = 0x5416879d esp = 0x002ff464 ebp = 0x002ff494
11:21:27 INFO - Found by: previous frame's frame pointer
11:21:27 INFO - 2 xul.dll!mozilla::net::nsStreamLoader::OnStopRequest(nsIRequest *,nsISupports *,nsresult) [nsStreamLoader.cpp:16823b6a72c5885ce37849fe5d2526d9600696c6 : 93 + 0xf]
11:21:27 INFO - eip = 0x52639ce7 esp = 0x002ff49c ebp = 0x002ff4d0
11:21:27 INFO - Found by: previous frame's frame pointer
11:21:27 INFO - 3 xul.dll!nsInputStreamPump::OnStateStop() [nsInputStreamPump.cpp:16823b6a72c5885ce37849fe5d2526d9600696c6 : 656 + 0xd]
11:21:27 INFO - eip = 0x5260aa21 esp = 0x002ff4d8 ebp = 0x002ff4fc
11:21:27 INFO - Found by: previous frame's frame pointer
11:21:27 INFO - 4 xul.dll!nsInputStreamPump::OnInputStreamReady(nsIAsyncInputStream *) [nsInputStreamPump.cpp:16823b6a72c5885ce37849fe5d2526d9600696c6 : 404 + 0x5]
11:21:27 INFO - eip = 0x5260a411 esp = 0x002ff504 ebp = 0x002ff520
11:21:27 INFO - Found by: previous frame's frame pointer
11:21:27 INFO - 5 xul.dll!nsInputStreamReadyEvent::Run() [nsStreamUtils.cpp:16823b6a72c5885ce37849fe5d2526d9600696c6 : 91 + 0x7]
11:21:27 INFO - eip = 0x52573e6c esp = 0x002ff528 ebp = 0x002ff534
....
11:21:27 INFO - 0x77690000 - 0x776a8fff sechost.dll 6.1.7600.16385
11:21:27 INFO - 0x776b0000 - 0x776fdfff gdi32.dll 6.1.7601.17514
11:21:27 INFO - 0x77700000 - 0x77734fff ws2_32.dll 6.1.7601.17514
11:21:27 INFO - TEST-UNEXPECTED-CRASH | /worklets/audio-worklet-import.https.html | expected OK
11:21:27 INFO - TEST-INFO took 19083ms
11:21:27 INFO - Browser exited with return code 0
11:21:27 INFO - PROCESS LEAKS None
11:21:27 INFO - Closing logging queue
11:21:27 INFO - queue closed
11:21:27 INFO - Setting up ssl
11:21:27 INFO - certutil |
11:21:27 INFO - certutil |
11:21:27 INFO - certutil |
11:21:27 INFO - Certificate Nickname Trust Attributes
11:21:27 INFO - SSL,S/MIME,JAR/XPI
11:21:27 INFO -
11:21:27 INFO - web-platform-tests CT,,
11:21:27 INFO -
11:21:28 INFO - Application command: Z:\task_1546253728\build\application\firefox\firefox.exe -marionette about:blank --wait-for-browser -profile c:\users\task_1546253728\appdata\local\temp\tmpyuam2v.mozrunner
11:21:28 INFO - Starting runner
11:21:28 INFO - PID 2580 | 1546255288485 addons.webextension.screenshots@mozilla.org WARN Loading extension 'screenshots@mozilla.org': Reading manifest: Invalid host permission: resource://pdf.js/
11:21:28 INFO - PID 2580 | 1546255288485 addons.webextension.screenshots@mozilla.org WARN Loading extension 'screenshots@mozilla.org': Reading manifest: Invalid host permission: about:reader*
11:21:29 INFO - PID 2580 | 1546255289786 Marionette INFO Listening on port 2828
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → karlt
Status: NEW → ASSIGNED
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 2•6 years ago
|
||
Assignee | ||
Comment 3•6 years ago
|
||
Assignee | ||
Comment 4•6 years ago
|
||
to keep the graph/worklet thread running as the Worklet is alive.
Depends on D15801
Assignee | ||
Comment 5•6 years ago
|
||
Worklet.addModule() can resolve its promise after a network load.
Promise fulfillment depends on network load.
https://github.com/w3c/css-houdini-drafts/issues/509 proposes that promise fulfillment depend on the module script error.
We need to keep the AudioWorklet thread running long enough for the script to run.
ExecutionRunnable owns WorkletFetchHandler owns Worklet.
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Updated•6 years ago
|
Attachment #9034657 -
Attachment description: Bug 1516956 keep AudioContext alive from AudioWorklet r?baku → bug 1516956 keep AudioContext alive from AudioWorklet r?baku
Pushed by ktomlinson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6a014e095c70
traverse AudioWorklet from AudioContext r=baku
https://hg.mozilla.org/integration/autoland/rev/b7d714a0b2d5
keep AudioContext alive from AudioWorklet r=baku
Comment 10•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/6a014e095c70
https://hg.mozilla.org/mozilla-central/rev/b7d714a0b2d5
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox67:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
Comment 11•6 years ago
|
||
Is this worth Beta backport consideration?
status-firefox65:
--- → wontfix
status-firefox66:
--- → affected
status-firefox-esr60:
--- → wontfix
Flags: needinfo?(karlt)
Assignee | ||
Comment 14•6 years ago
|
||
This is disabled on release and beta, even in testing, so no value in uplift thanks.
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•