bug 1516956 keep AudioContext alive from AudioWorklet r=baku

to keep the graph/worklet thread running as long as the Worklet is alive.

Differential Revision: https://phabricator.services.mozilla.com/D15802