dom/worklet/Worklet.h
@@ -31,7 +31,11 @@ class Worklet final : public nsISupports, public nsWrapperCache {
   NS_DECL_CYCLE_COLLECTING_ISUPPORTS
   NS_DECL_CYCLE_COLLECTION_SCRIPT_HOLDER_CLASS(Worklet)
 
-  Worklet(nsPIDOMWindowInner* aWindow, RefPtr<WorkletImpl> aImpl);
+  // |aOwnedObject| may be provided by the WorkletImpl as a parent thread
+  // object to keep alive and traverse for CC as long as the Worklet has
+  // references remaining.
+  Worklet(nsPIDOMWindowInner* aWindow, RefPtr<WorkletImpl> aImpl,
+          nsISupports* aOwnedObject = nullptr);
 
   nsPIDOMWindowInner* GetParentObject() const { return mWindow; }
 
@@ -51,6 +55,7 @@ class Worklet final : public nsISupports, public nsWrapperCache {
                              WorkletFetchHandler* aHandler);
 
   nsCOMPtr<nsPIDOMWindowInner> mWindow;
+  nsCOMPtr<nsISupports> mOwnedObject;
 
   nsRefPtrHashtable<nsCStringHashKey, WorkletFetchHandler> mImportHandlers;
 
